--- a/public/themes/dracula.css
+++ b/public/themes/dracula.css
@@ -2,11 +2,12 @@
     --bg: #282a36;
     --fg: #f8f8f2;
     --selection: #44475a;
+    --black: #21222c;
     --red: #ff5555;
-    --orange: #ffb86c;
-    --yellow: #f1fa8c;
     --green: #50fa7b;
-    --purple: #bd93f9;
+    --yellow: #f1fa8c;
+    --blue: #bd93f9;
+    --magenta: #ff79c6;
     --cyan: #8be9fd;
-    --pink: #ff79c6;
+    --white: #f8f8f2;
 }
